Provise web3 interface and hardcode network id

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://github.com/OffchainLabs/arb-web3-provider#readme",
   "dependencies": {
     "ethers": "^4.0.27",
+    "ethers-web3-bridge": "0.0.1",
     "jayson": "^2.1.2",
     "node-fetch": "^2.3.0",
     "promise-poller": "^1.7.0"
