Remove code duplication and incorporate patched ethers-web3-bridge

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "homepage": "https://github.com/OffchainLabs/arb-web3-provider#readme",
   "dependencies": {
+    "arb-ethers-provider": "https://github.com/OffchainLabs/arb-ethers-provider.git",
     "ethers": "^4.0.27",
-    "ethers-web3-bridge": "0.0.1",
+    "ethers-providers": "^2.1.19",
+    "ethers-utils": "^2.1.11",
     "jayson": "^2.1.2",
     "node-fetch": "^2.3.0",
     "promise-poller": "^1.7.0"
